--- a/sources/css/forms.css
+++ b/sources/css/forms.css
@@ -136,7 +136,7 @@ input[type=file] {
     color: green;
 }
 
-.form-container .span-error-description {
+.form-container .error-description {
     display: none;
     position: absolute;
     bottom: -1.6em;
@@ -148,6 +148,23 @@ input[type=file] {
     font-weight: 400;
     color: red;
     cursor: text;
+}
+
+.form-container .show-password {
+    background: url('form_images/show_password.svg');
+    background-position: 0 0;
+    position: absolute;
+    display: block;
+    top: 0.9em;
+    right: 0.6em;
+    width: 1.2em;
+    height: 1.2em;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.form-container .show-password.show {
+    background-position: 0 1.2em;
 }
 
 select {
@@ -174,19 +191,6 @@ span.inputFileMaskIcon {
     top: 0;
     width: 100%;
     height: 100%;
-}
-
-span.spanShowPassword {
-    background: url('form_images/showPassword.svg');
-    background-position: 0 0;
-    position: absolute;
-    display: block;
-    top: 0.9em;
-    right: 0.6em;
-    width: 1.2em;
-    height: 1.2em;
-    cursor: pointer;
-    z-index: 1;
 }
 
 .labelValidateJsOk, .labelValidateJsError {
