--- a/sources/css/sheets.css
+++ b/sources/css/sheets.css
@@ -1,17 +1,11 @@
 /* Reset */
-@import url(reset.css);
+@import url(normalize.css);
 
 /* Estilos padrão */
 @import url(fonts.css);
 @import url(default.css);
-@import url(forms.css);
 @import url(buttons.css);
-
-/* Estilo geral do site */
-@import url(style.css);
-
-/* Página não encontrada */
-@import url(404.css);
+@import url(forms.css);
 
 /* Media Queries */
 @import url(media_queries.css);
